# Dungeon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  clear.ps1  cmake.hpp.in  editor.cpp  game.cpp  main.cpp  sdl.ps1  tar.py
.github/workflows/: cmake-single-platform.yml
cmake/: CMakeCommon.cmake  CMakeEditor.cmake  CMakeEngine.cmake  CMakeFile.cmake  CMakeHelper.cmake  CMakeUtility.cmake  CMakeVendor.cmake  CmakeEngineLua.cmake
include/: engineForward.hpp  error.hpp  global.hpp  graphicsForward.hpp  macros.hpp  timer.hpp
include/common/: actionmgr.hpp  colour.hpp  coordinates.hpp  handlers.hpp  imgui.hpp  include.hpp  interrupt.hpp  jsonAnimation.hpp  jsonNumberTexture.hpp  jsonTextTexture.hpp  math.hpp  perspective.hpp  scale.hpp  sdl.hpp  segment.hpp  segmentType.hpp  structures.hpp  tile.hpp
include/editor/: editor.hpp  mouse.hpp  structures.hpp  tile.hpp  ui.hpp  visualTile.hpp
include/engine/: actionmgr.hpp  engine.hpp  include.hpp  initializer.hpp  interrupt.hpp  loading.hpp  sdl.hpp  structures.hpp
include/file/: editorFile.hpp  engineFile.hpp  export.hpp  import.hpp
include/graphics/: animatedTexture.hpp  floatingText.hpp  graphics.hpp  numbers.hpp  structures.hpp
include/items/: definition.hpp  inventory.hpp  item.hpp  jsonItems.hpp  slot.hpp  slots.hpp  weapon.hpp  weaponType.hpp
include/level/: editorFile.hpp  file.hpp  level.hpp  structures.hpp  tile.hpp
include/monster/: beanMan.hpp  caveCrawler.hpp  definition.hpp  include.hpp  monster.hpp  slime.hpp  structures.hpp
include/npc/: cow.hpp  definition.hpp  include.hpp  npc.hpp
include/object/: base.hpp  door.hpp  include.hpp  objects.hpp  particle.hpp  projectile.hpp  warp.hpp
include/objects/: door.hpp  include.hpp  objects.hpp  obstacle.hpp  particle.hpp  projectile.hpp  textbox.hpp
include/player/: energy.hpp  health.hpp  indicator.hpp  player.hpp  stats.hpp  userInterface.hpp
include/spell/: spell.hpp  spellType.hpp
include/stats/: stats.hpp
include/ui/: textbox.hpp  userInterface.hpp
include/utility/: bits.hpp  file.hpp  functions.hpp  math.hpp  orientation.hpp  rotatingList.hpp  scale.hpp  sdl.hpp  string.hpp  textures.hpp  timer.hpp  trigonometry.hpp  vector.hpp
include/world/: level.hpp
items/bow/: BasicBow.json
items/necklace/: GoldAmulet.json
items/staff/: BasicStaff.json
levels/: 554.map  555.map  565.map  grassland1.bak  grassland1.map  house1.map  level.map
lua/: CMakeLists.txt
rsrc/: BaseTextures.json  Beach.json  Bolt.json  Energy.json  Fireball.json  Grass.json  GrassBridges.json  GrassEnviroment.json  GrassHill.json  GrassLake.json  GrassOcean.json  Heart.json  Hill.json  HouseRed.json  HumanBase.json  HumanBaseIdle.json  HumanBaseMoving.json  Lake.json  LettersWhite.json  LevelEditor.json  Mushroom.json  PurpleFloor.json  PurpleWall.json  PurpleWallNorth.json  Roads.json  Slime.json  Spells.json  Stone.json  Tree.json  WhiteFont.json
rsrc/animals/: Cow1.json
rsrc/base/: Beach.json  Dirt.json  Grassland.json  GrasslandWater.json  OceanEdge.json  Water.json
rsrc/cave/: Cave.json  CaveBox.json  CaveCliff.json  CaveLantern.json  CaveMineralBig.json  CaveMineralMedium.json  CaveMineralSmall.json  CaveMiningRail.json  CaveTorch.json
rsrc/constructions/: Bridge.json  Door.json  DoorAnimation.json  Fence.json  HouseBlue.json  HouseGreen.json  HouseRed.json  Mailbox.json  Sign.json
rsrc/effects/: AttackSweep.json  Light.json  LightCircleWhiteBig.json  LightCircleWhiteMedium.json  LightCircleWhiteSmall.json  LightCircleYellowBig.json  LightCircleYellowMedium.json  LightCircleYellowSmall.json  LightWhiteBig.json
rsrc/environment/: BeachShell.json  Busch.json  Bush.json  Flower.json  Fruit.json  Mushroom.json  Stone.json  StoneSword.json  Tree.json
rsrc/font/: TextBlack.json  TextWhite.json  fonts.json
rsrc/fonts/: LetterWhite.json  NumberWhite.json  WhiteFont.json
rsrc/grassland/: Grassland.json  GrasslandBridge.json  GrasslandBush.json  GrasslandCliff.json  GrasslandLeaf.json  GrasslandMushroom.json  GrasslandPebble.json  GrasslandPlateau.json  GrasslandStone.json  GrasslandTree.json  GrasslandWater.json
rsrc/icons/: Bolt.json  Heart.json  Logo.json
rsrc/interior/: InteriorFloor.json  InteriorFlowers.json  InteriorPainting.json  InteriorShelf.json  InteriorStair.json  InteriorTV.json  InteriorWall.json  InteriorWallEdge.json
rsrc/items/: Bow.json  Necklace.json  Staff.json
rsrc/monster/: BeanMan.json  BeanManFlower.json  CaveCrawler.json  MushroomPurple.json  MushroomRed.json  Slime.json  SlimeBlue.json  SlimeGreen.json  SlimePurple.json  SlimeRed.json
rsrc/monsters/: Slime.json
rsrc/mountains/: MountainBrown.json
rsrc/player/: HumanBase.json  WomanDead.json  WomanIdle.json  WomanWalk.json
rsrc/projectiles/: PurpleBall.json
rsrc/spells/: Fireball.json
rsrc/ui/: CurrentHotkey.json  Gradients.json  HealthBar.json  HealthBase.json  HealthGradient.json  HealthRed.json  Healthbar.json  Inventory.json  Selector.json  Soul.json  Stats.json  Textbox.json  TextboxBigCenter.json  TextboxBigEnd.json  TextboxBigStart.json  TextboxLargeCenter.json  TextboxLargeEnd.json  TextboxLargeStart.json  TextboxMediumCenter.json  TextboxMediumEnd.json  TextboxMediumStart.json  TextboxSmallCenter.json  TextboxSmallEnd.json  TextboxSmallStart.json
rsrc/village/: VillageBench.json  VillageDoor.json  VillageDoorAnimation.json  VillageFarmland.json  VillageFountain.json  VillageHouseBase.json  VillageHouseMisc.json  VillageLogs.json  VillageRoad.json  VillageRoofBlack.json  VillageRoofBlue.json  VillageRoofRed.json  VillageWell.json
rsrc/xcf/: Beach.xcf  Energy.xcf  Fireball.xcf  Grass.xcf  Hill.xcf  Hills.xcf  HumanBase.xcf  HumanBaseWalk.xcf  (+8 more)
xcf/: Beach.xcf  BeachShell.xcf  Bolt.xcf  Bridge.xcf  Bush.xcf  Dirt.xcf  Fence.xcf  Flower.xcf  Fruit.xcf  Grass.xcf  Heart.xcf  HouseBlue.xcf  HouseGreen.xcf  HouseRed.xcf  HumanBase.xcf  LettersWhite.xcf  Logo.xcf  Mailbox.xcf  MountainBrown.xcf  Mushroom.xcf  OceanEdge.xcf  Player.xcf  PurpleWall.xcf  Serene_Village_16x16.xcf  Sign.xcf  Slime.xcf  Stones.xcf  Trees.xcf
(+322 files in other folders)
